<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/rosconnect_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <TextView
                android:id="@+id/rosconnect_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/rosmain_title" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rosmain_master_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:text="@string/rosmain_master_label" />

                <TextView
                    android:id="@+id/rosmain_master_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:text="@string/data_placeholder_none" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rosmain_local_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:text="@string/rosmain_local_label" />

                <TextView
                    android:id="@+id/rosmain_local_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:text="@string/data_placeholder_none" />

            </LinearLayout>

            <Button
                android:id="@+id/rosmain_start_node_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/rosmain_start_node_button"/>

            <Button
                android:id="@+id/rosmain_remaster_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/rosmain_remaster_button"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>